--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -30,3 +30,7 @@ jobs:
       - name: ESLint
         run: npm run lint
         working-directory: ${{ env.project-directory }}
+
+      - name: Prettier
+        run: npx prettier ./ --check
+        working-directory: ${{ env.project-directory }}
