--- a/.github/workflows/pull-request-ci.yml
+++ b/.github/workflows/pull-request-ci.yml
@@ -8,29 +8,23 @@ on:
     branches:
       - web-map-site
 
-env:
-  project-directory: ./
-
 jobs:
   test:
-    name: Run all tests
     runs-on: ubuntu-latest
-    container: node:16.12.0
-
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js 16.x
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
           node-version: '16.x'
+          cache: 'npm'
+
       - name: npm clean install
         run: npm ci
-        working-directory: ${{ env.project-directory }}
 
       - name: ESLint
         run: npm run lint
-        working-directory: ${{ env.project-directory }}
 
       - name: Prettier
         run: npx prettier ./ --check
-        working-directory: ${{ env.project-directory }}
