--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -92,7 +92,7 @@
         "allowShortCircuit": true
       }
     ],
-    "no-unused-vars": "warn",
+    "no-unused-vars": "error",
     "no-use-before-define": "warn",
     "no-useless-escape": "warn",
     "no-useless-return": "warn",
