--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "source-map-explorer": "^2.5.2",
-    "treetracker-web-map-core": "github:Greenstand/treetracker-web-map-core#v1.0.4",
+    "treetracker-web-map-core": "^1.3.1",
     "tss-react": "^2.0.3"
   },
   "devDependencies": {
