refactor: pages use api functions
test: fix nock routes and consolidate into resuable function

test: pages use nockRoutes

chore: fix .env API host

refactor: rename getRoutes

chore: remove msw browser mocking

test: top.cy.js intercepts client api call

refactor: nock routes usage

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API=https://dev-k8s.treetracker.org/webmap/
+NEXT_PUBLIC_API=https://dev-k8s.treetracker.org/webmap
 NEXT_PUBLIC_API_NEW=http://127.0.0.1:4010/mock
 NEXT_PUBLIC_TILE_SERVER_URL=https://{s}.treetracker.org/tiles/new/
 NEXT_PUBLIC_TILE_SERVER_SUBDOMAINS=dev-k8s
