--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@mui/lab": "^5.0.0-alpha.54",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "clsx": "^1.1.1",
     "country-flag-icons": "^1.4.19",
     "expect-runtime": "^0.4.0",
@@ -63,7 +63,8 @@
     "react-world-map": "^2.4.0",
     "source-map-explorer": "^2.5.2",
     "treetracker-web-map-core": "^1.6.1",
-    "tss-react": "^2.0.3"
+    "tss-react": "^2.0.3",
+    "url-join-ts": "^1.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -74,6 +75,8 @@
     "@next/eslint-plugin-next": "^12.0.7",
     "@stoplight/prism-cli": "^4.4.2",
     "@svgr/webpack": "^5.5.0",
+    "@swc/core": "^1.2.136",
+    "@swc/jest": "^0.2.17",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.4.1",
@@ -92,8 +95,9 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^7.0.0",
     "is-ci": "^3.0.1",
-    "jest": "^27.2.5",
+    "jest": "^27.5.0",
     "lint-staged": "^11.2.6",
+    "msw": "^0.36.8",
     "next-router-mock": "^0.6.3",
     "nock": "^13.1.3",
     "prettier": "^2.4.1",
