--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cyu": "cypress open-ct",
     "cyux": "rm -rf .next/; npm run cyu",
     "dev": "next dev",
-    "dev:mock": "concurrently \"npm run mock-server\" \"npm run dev\"",
+    "dev:mock": "NEXT_PUBLIC_API_MOCKING=enabled npm run dev",
     "eject": "react-scripts eject",
     "format": "npm run prettier && npm run lint:fix",
     "lint": "eslint . --cache",
@@ -101,7 +101,7 @@
     "lint-staged": "^11.2.6",
     "msw": "^0.36.8",
     "next-router-mock": "^0.6.3",
-    "nock": "^13.1.3",
+    "nock": "^13.2.4",
     "prettier": "^2.4.1",
     "sort-package-json": "^1.53.1",
     "start-server-and-test": "^1.14.0",
@@ -111,6 +111,9 @@
   },
   "engines": {
     "node": "^16"
+  },
+  "msw": {
+    "workerDirectory": "public"
   },
   "proxy": "http://127.0.0.1:3001"
 }
